Map styling and z-index issues
fixed map scaling for smaller screens and also fixed up an
issue causing the anchor link in the header to not be hoverable,
was being caused by z-index issues.

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,12 +49,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: calc(100vw - 40px);
+  position: fixed;
   padding: 0.6rem 1.2rem 0.6rem 1.2rem;
-  /* margin: 0.7rem 0.7rem 0.7rem 0.7rem; */
   background-color: rgba(227, 227, 227, 0.05);
   border-radius: 0 0 16px 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(1.5px);
+  z-index: 10;
 }
 
 .logo-header {
@@ -62,11 +64,11 @@ header {
   align-items: center;
   color: #ffffff;
   padding: 0 0.8rem 0.3rem 0.8rem;
-  user-select: none;
 }
 
 .logo-header h1 {
   font-style: italic;
+  user-select: none;
 }
 
 .site-logo {
@@ -83,9 +85,34 @@ header {
   text-decoration: none;
   color: #ffffff;
   font-style: italic;
+  font-weight: bold;
+  z-index: 10;
+}
+
+.account-button:hover {
+  color: #ffff2f;
 }
 
 .main-container {
   width: 100%;
   height: 100%;
+}
+
+/*map styling*/
+
+#world-map {
+  height: 100vh;
+  width: auto;
+}
+
+#world-map path {
+  fill: var(--med-blue);
+  stroke: #eee;
+  stroke-width: 0.25;
+}
+
+#world-map path:hover {
+  fill: var(--light-blue);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
